add the h2 and paragraph

--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Pizza camp</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container text-white" >
+        <div class="welcome text-center">
+            <h2 class="text-white">Welcome to our pizza-inn</h2>
+
+            <p class="text-white">Enjoy the super amazing taste of the Double Stack Pizza with your better half</p>
+            <button id="makeorderbtn" class="btn bg-primary text-white">Make order</button>
+        </div>
+        <br>
+        <hr>
+
+
+
+
 
     </div>
 
