style the the body and the container

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <div class="container text-white" >
         <div class="welcome text-center">
-            <h2 class="text-white">Welcome to our pizza-inn</h2>
+            <h2 class="">Welcome to our pizza-inn</h2>
 
-            <p class="text-white">Enjoy the super amazing taste of the Double Stack Pizza with your better half</p>
+            <p class="">Enjoy the super amazing taste of the Double Stack Pizza with your family and friends</p>
             <button id="makeorderbtn" class="btn bg-primary text-white">Make order</button>
         </div>
         <br>
