add the form on the html file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container text-white" >
+    <div class="container text-white">
         <div class="welcome text-center">
             <h2 class="">Welcome to our pizza-inn</h2>
 
@@ -24,6 +24,41 @@
         </div>
         <br>
         <hr>
+        <form id="myform">
+            <div class="form-group name">
+                <label for="name">Name:</label>
+                <input type="text" class="form-control" id="name">
+            </div>
+            <div class="form-group">
+                <label for="size">Select Pizza size:</label>
+                <select class="form-select" aria-label="Default select example" id="size">
+                    <option value="small">Small</option>
+                    <option value="medium">Medium</option>
+                    <option value="large">Large</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="topping">Select your favourite topping:</label>
+                <select class="form-select" aria-label="Default select example" id="topping">
+                    <option value="broccoli">Broccoli</option>
+                    <option value="bacon">Bacon</option>
+                    <option value="Sausage">Sausage</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="crust">Select your favourite crust:</label>
+                <select class="form-select" aria-label="Default select example" id="crust">
+                    <option value="Newyorkstyle">New York style</option>
+                    <option value="Double-dough">Double-dough</option>
+                    <option value="Focaccia">Focaccia</option>
+                </select>
+            </div>
+            <button type="submit" class="btn bg-primary">place Order</button>
+            <button type="button" class="btn bg-primary" id="cancel">Cancel</button>
+
+        </form>
+
+
 
 
 
