fix back the form

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
             <div class="form-group">
                 <label for="topping">Select your favourite topping:</label>
                 <select class="form-select" aria-label="Default select example" id="topping">
-                    <option value="broccoli">Broccoli</option>
-                    <option value="bacon">Bacon</option>
-                    <option value="Sausage">Sausage</option>
+                    <option value="Green peppers">Green peppers</option>
+                    <option value="Spinach">Spinach</option>
+                    <option value="Pineapple">Pineapple</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="crust">Select your favourite crust:</label>
                 <select class="form-select" aria-label="Default select example" id="crust">
-                    <option value="Newyorkstyle">New York style</option>
-                    <option value="Double-dough">Double-dough</option>
-                    <option value="Focaccia">Focaccia</option>
+                    <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust</option>
+                    <option value="Flatbread">Flatbread</option>
+                    <option value="Sicilian Style">Sicilian Style</option>
                 </select>
             </div>
-            <button type="submit" class="btn bg-primary">place Order</button>
-            <button type="button" class="btn bg-primary" id="cancel">Cancel</button>
+            <button type="submit" class="btn bg-danger">check Out</button>
+            <button type="button" class="btn bg-danger" id="cancel">Cancel</button>
 
         </form>
 
