add the class row and style it

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                             <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust</option>
                             <option value="Flatbread">Flatbread</option>
                             <option value="Sicilian Style">Sicilian Style</option>
+                            <option value="pineable">pineable</option>
                         </select>
                     </div>
                     <button type="submit" class="btn bg-danger">check Out</button>
@@ -76,14 +77,14 @@
                             <div id="mylocation">
                                 <label for="location">Input Location:</label>
                                 <input type="text" id="location">
-                                <p><span id="success"> Delivery fee is fixed with Ksh.200.</span></p>
-                                <p id="successtext" class="card bg-white"><span id="sname"></span>, your order is
+                                <p><span id="success"> Delivery amount is fixed with Ksh.300.</span></p>
+                                <p id="successmessage" class="card bg-white"><span id="sname"></span>, your order is
                                     <strong>successfull</strong> ,
                                     it
-                                    will be delivered to <span id="place"></span>.In case of inconvience , please feel
+                                    will be delivered to <span id="place"></span>.If undelivered, please feel
                                     free
                                     to
-                                    reach us.</p>
+                                    contact us via 0721473424 Vincent will address it.</p>
                             </div>
                             <button class="btn bg-danger" id="complete">Complete Order</button>
                             <button class="btn bg-success text-white">Clear</button>
@@ -97,6 +98,65 @@
 
 
                     </div>
+                </div>
+            </div>
+            <hr>
+            <div class="displays">
+                <div class="imagesection row justify-content-between">
+                    <div id="Detroit">
+                        <img src="/images/image 2.jpeg" alt="">
+                        <p>Detroit Pizza</p>
+                    </div>
+
+                    <div id="sillicians">
+                        <img src="/images/image 3.jpeg" alt="">
+                        <p>Sillicians Pizza</p>
+                    </div>
+                    <div id="Ortolana">
+                        <img src="/images/image 4.jpeg" alt="">
+                        <p>Ortolana/Vegetariana</p>
+                    </div>
+                </div>
+                <div class="message d-flex justify-content-center text-infor">
+                    "A PIZZA SLICE A DAY KEEPS SADNESS AWAY"
+                </div>
+
+
+            </div>
+            <br>
+            <hr>
+
+
+
+        </div>
+        <div class="row bg-primary">
+            <div class="col-md-4">
+                <h3>Our Products </h3>
+
+            </div>
+            <div class="col-md-4">
+                <h3>Contact us</h3>
+                <p>Join our community:</p>
+                <ul>
+                    <li>Phone: 0721473424</li>
+                    <li>Email:biivincent1997@gmail.com</li>
+                    <button class="btn btn-primary">Subscribe</button>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h3>Location</h3>
+                <p>Feel free to visit us</p>
+                <p>located at NAirobi , Kenya.</p>
+                <p>Muindi Mweusi Supermarket.</p>
+
+
+
+
+            </div>
+
+        </div>
+
+    </div>
 
 </body>
 
