modify html file

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
         </div>
-        <div class="row bg-primary">
+        <div class="row bg-success">
             <div class="col-md-4">
                 <h3>Our Products </h3>
 
@@ -140,13 +140,13 @@
                 <ul>
                     <li>Phone: 0721473424</li>
                     <li>Email:biivincent1997@gmail.com</li>
-                    <button class="btn btn-primary">Subscribe</button>
+                    <button class="btn btn-primary">Contact</button>
                 </ul>
             </div>
             <div class="col-md-4">
                 <h3>Location</h3>
                 <p>Feel free to visit us</p>
-                <p>located at NAirobi , Kenya.</p>
+                <p>located at Nairobi,Kenya</p>
                 <p>Muindi Mweusi Supermarket.</p>
 
 
