add the footer and style it

--- a/index.html
+++ b/index.html
@@ -148,13 +148,15 @@
                 <p>Feel free to visit us</p>
                 <p>located at Nairobi,Kenya</p>
                 <p>Muindi Mweusi Supermarket.</p>
-
-
-
-
             </div>
 
         </div>
+        <div>
+            <div class="footer d-flex justify-content-center">
+                <p>Copyright &#169 2021 Pizza Place.</p>
+            </div>
+        </div>
+        
 
     </div>
 
