--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
         <div>
             <div class="footer d-flex justify-content-center">
-                <p>Copyright &#169 2021 Pizza Place.</p>
+                <p class="mt-2">Copyright &#169 2021 Pizza Place.</p>
             </div>
         </div>
         
