link html file with the js folder

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    
     <title>Pizza camp</title>
 </head>
 
@@ -161,5 +162,6 @@
     </div>
 
 </body>
+<script src="js/script.js"></script>
 
 </html>
