add contructor and prototype on the script file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="row d-flex justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <form id="myform">
                     <div class="form-group name">
                         <label for="name">Name:</label>
@@ -33,15 +33,15 @@
                     </div>
                     <div class="form-group">
                         <label for="size">Select Pizza size:</label>
-                        <select class="form-select" aria-label="Default select example" id="size">
+                        <select class="form-select form-control" aria-label="Default select example" id="size">
                             <option value="small">Small</option>
                             <option value="medium">Medium</option>
                             <option value="large">Large</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="topping">Select your favourite topping:</label>
-                        <select class="form-select" aria-label="Default select example" id="topping">
+                        <label for="toppings">Select your favourite topping:</label>
+                        <select class="form-select form-control" aria-label="Default select example" id="topping">
                             <option value="Green peppers">Green peppers</option>
                             <option value="Spinach">Spinach</option>
                             <option value="Pineapple">Pineapple</option>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="form-group">
                         <label for="crust">Select your favourite crust:</label>
-                        <select class="form-select" aria-label="Default select example" id="crust">
+                        <select class="form-select form-control" aria-label="Default select example" id="crust">
                             <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust</option>
                             <option value="Flatbread">Flatbread</option>
                             <option value="Sicilian Style">Sicilian Style</option>
@@ -103,7 +103,7 @@
             </div>
             <hr>
             <div class="displays">
-                <div class="imagesection row justify-content-between">
+                <div class="imagesection row">
                     <div id="Detroit">
                         <img src="/images/image 2.jpeg" alt="">
                         <p>Detroit Pizza</p>
