declaring the parameters in the constructor

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <option value="medium">Medium</option>
                             <option value="large">Large</option>
                         </select>
-                    </div>
+                    </div>orm#myform
                     <div class="form-group">
                         <label for="toppings">Select your favourite topping:</label>
                         <select class="form-select form-control" aria-label="Default select example" id="topping">
