--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    
+
     <title>Pizza camp</title>
 </head>
 
@@ -157,7 +160,7 @@
                 <p class="mt-2">Copyright &#169 2021 Pizza Place.</p>
             </div>
         </div>
-        
+
 
     </div>
 
