fix back the script.js file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <option value="pineable">pineable</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn bg-danger">check Out</button>
+                    <button type="submit" class="btn bg-danger" id="check" >check Out</button>
                     <button type="button" class="btn bg-danger" id="cancel">Cancel</button>
 
                 </form>
@@ -73,7 +73,8 @@
 
 
 
-                        <ol id="fullorder"> </ol>
+
+                        <ol id="fullorder"></ol>
 
                         <p>Total Cost: <span id="totalcost"></span>Kshs.</p>
 
