modify script file

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                             <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust</option>
                             <option value="Flatbread">Flatbread</option>
                             <option value="Sicilian Style">Sicilian Style</option>
-                            <option value="pineable">pineable</option>
+
                         </select>
                     </div>
-                    <button type="submit" class="btn bg-danger" id="check" >check Out</button>
+                    <button type="submit" class="btn bg-danger" id="check">check Out</button>
                     <button type="button" class="btn bg-danger" id="cancel">Cancel</button>
 
                 </form>
@@ -83,13 +83,14 @@
                                 <label for="location">Input Location:</label>
                                 <input type="text" id="location">
                                 <p><span id="success"> Delivery amount is fixed with Ksh.300.</span></p>
-                                <p id="successmessage" class="card bg-white"><span id="sname"></span>, your order is
+                                <p id="successtext" class="card bg-white"><span id="sname"></span>, your order is
                                     <strong>successfull</strong> ,
                                     it
                                     will be delivered to <span id="place"></span>.If undelivered, please feel
                                     free
                                     to
-                                    contact us via 0721473424 Vincent will address it.</p>
+                                    contact us via 0721473424 Vincent will address it.
+                                </p>
                             </div>
                             <button class="btn bg-danger" id="complete">Complete Order</button>
                             <button class="btn bg-success text-white">Clear</button>
