fix back the script file

--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+    <title>Pizza camp</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
 
-    <title>Pizza camp</title>
+
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -41,21 +51,21 @@
                             <option value="medium">Medium</option>
                             <option value="large">Large</option>
                         </select>
-                    </div>orm#myform
+                    </div>
                     <div class="form-group">
                         <label for="toppings">Select your favourite topping:</label>
                         <select class="form-select form-control" aria-label="Default select example" id="topping">
-                            <option value="Green peppers">Green peppers</option>
-                            <option value="Spinach">Spinach</option>
-                            <option value="Pineapple">Pineapple</option>
+                            <option value="green peppers">Green peppers</option>
+                            <option value="spinach">Spinach</option>
+                            <option value="pineapple">Pineapple</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label for="crust">Select your favourite crust:</label>
                         <select class="form-select form-control" aria-label="Default select example" id="crust">
-                            <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust</option>
-                            <option value="Flatbread">Flatbread</option>
-                            <option value="Sicilian Style">Sicilian Style</option>
+                            <option value="cheese-Stuffed Crust">Cheese-Stuffed Crust</option>
+                            <option value="flatbread">Flatbread</option>
+                            <option value="sicilian Style">Sicilian Style</option>
 
                         </select>
                     </div>
@@ -97,10 +107,6 @@
 
 
                         </div>
-
-
-
-
 
 
                     </div>
@@ -167,6 +173,6 @@
     </div>
 
 </body>
-<script src="js/script.js"></script>
+
 
 </html>
