modify style,script and html files

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="row d-flex justify-content-center">
 
                 <div class="col-md-7">
-                    <div class="cart card card-body text-success">
+                    <div class="cart card card-body text-success" id="cardi">
                         <h2>My order</h2>
                         <p>Welcome, <span id="somename"></span></p>
 
@@ -87,6 +87,17 @@
                         <ol id="fullorder"></ol>
 
                         <p>Total Cost: <span id="totalcost"></span>Kshs.</p>
+                        <label for="location">Input Location:</label>
+                        <input type="text" id="location">
+                        <p><span id="success"> Delivery amount is fixed with Ksh.300.</span></p>
+                        <p id="successtext" class="card bg-white"><span id="sname"></span>, your order is
+                            <strong>successfull</strong> ,
+                            it
+                            will be delivered to <span id="place"></span>.If undelivered, please feel
+                            free
+                            to
+                            contact us via 0721473424 Vincent will address it.
+                        </p>
 
                         <div class="form-group">
                             <div id="mylocation">
