--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <p id="successtext" class="card bg-white"><span id="sname"></span>, your order is
                             <strong>successfull</strong> ,
                             it
-                            will be delivered to <span id="place"></span>.If undelivered, please feel
+                            will be delivered to <span id="location"></span>.If undelivered, please feel
                             free
                             to
                             contact us via 0721473424 Vincent will address it.
