--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
             <div class="displays">
                 <div class="imagesection row">
                     <div id="Detroit">
-                        <img src="/images/image 2.jpeg" alt="">
+                        <img src="images/image 2.jpeg" alt="">
                         <p>Detroit Pizza</p>
                     </div>
 
                     <div id="sillicians">
-                        <img src="/images/image 3.jpeg" alt="">
+                        <img src="images/image 3.jpeg" alt="">
                         <p>Sillicians Pizza</p>
                     </div>
                     <div id="Ortolana">
-                        <img src="/images/image 4.jpeg" alt="">
+                        <img src="images/image 4.jpeg" alt="">
                         <p>Ortolana/Vegetariana</p>
                     </div>
                 </div>
