add background image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <div class="container text-white">
+    <div class="container text-white" style="background-image: url('/images/image6.jpeg');">
         <div class="welcome text-center">
             <h2 class="">Welcome to our pizza-inn</h2>
 
