--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <div class="container text-white"
+    <div class="container text-white">
         <div class="welcome text-center">
             <h2 class="">Welcome to our pizza-inn</h2>
 
@@ -87,7 +87,7 @@
                         <ol id="fullorder"></ol>
 
                         <p>Total Cost: <span id="totalcost"></span>Kshs.</p>
-  
+
 
                         <div class="form-group">
                             <div id="mylocation">
