add products on the html page

--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
         <div class="row bg-success">
             <div class="col-md-4">
                 <h3>Our Products </h3>
+                <ul>
+                    <li>Cateting services</li>
+                    <li>Food and coffee services</li>
+                    <li>Hospitality and accomondation services</li>
+                    <li>All types pizza and their crust /toppings in different quantities</li>
+                </ul>
 
             </div>
             <div class="col-md-4">
